--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.8.1
 crispy-bootstrap4==2024.1
 Django==5.0.4
+django-honeypot==1.2.1
+django-admin-honeypot==1.1.0
 mysql-connector-python==8.3.0
 pillow==10.3.0
 sqlparse==0.4.4
 typing_extensions==4.10.0
 tzdata==2024.1
+asgiref==3.8.1
+crispy-bootstrap4==2024.1
